<resources>
    <string name="app_name">EmployeeOfTheMonth</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="edit">Edit</string>
    <string name="gallery">Gallery</string>
    <string name="photo">photo</string>
    <string name="load_picture">Load picture</string>
    <string name="load_a_picture">Load a picture</string>
    <string name="add_text">Add Text</string>
    <string name="save">Save</string>
    <string name="add_sticker">Add Sticker</string>
    <string name="select_share"><![CDATA[Select & Share]]></string>
    <string name="Ok" />
</resources>
